[package]
name = "zydis-wasm"
version = "0.1.0"
authors = ["Willi Ballenthin <wilbal1087@gmail.com>"]
edition = "2021"
homepage = "https://github.com/williballenthin/zydis-wasm"
repository = "https://github.com/williballenthin/zydis-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
zydis = { git = "https://github.com/williballenthin/zydis-rs", branch = "nightly/wasm", features = ["wasm"] }
wasm-bindgen = "0.2"

[profile.release]
lto = true
